--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "author": "Akira Tsai",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest",
-    "test:ci": "jest --coverage --passWithNoTests",
+    "test": "jest --coverage --passWithNoTests",
     "test:watch": "jest --watch"
   },
   "husky": {
