--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   },
   "license": "MIT",
   "author": "Akira Cai",
-  "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --passWithNoTests",
+    "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "husky": {
@@ -35,6 +34,10 @@
     "*.md": [
       "cspell --no-summary",
       "prettier --write"
+    ],
+    "*.yml": [
+      "cspell --no-summary",
+      "prettier --write"
     ]
   },
   "config": {
@@ -43,17 +46,17 @@
     }
   },
   "eslintConfig": {
-    "root": true,
-    "parser": "babel-eslint",
     "env": {
       "es2020": true,
       "jest/globals": false
     },
+    "parser": "babel-eslint",
     "extends": [
       "eslint:recommended",
       "eslint-config-standard",
       "plugin:eslint-plugin-jest/recommended",
-      "plugin:eslint-plugin-prettier/recommended"
+      "eslint-config-prettier",
+      "eslint-config-prettier/standard"
     ],
     "overrides": [
       {
@@ -64,34 +67,35 @@
           "jest/globals": true
         }
       }
-    ]
+    ],
+    "root": true
   },
   "jest": {
     "coverageDirectory": "coverage",
     "restoreMocks": true,
     "testEnvironment": "node"
   },
+  "dependencies": {
+    "fp-ts": "^2.7.0"
+  },
   "devDependencies": {
-    "@types/jest": "^26.0.0",
+    "@types/jest": "^26.0.4",
     "babel-eslint": "^10.1.0",
-    "benchmark": "^2.1.4",
-    "commitizen": "^4.0.4",
-    "cspell": "^4.0.55",
-    "cz-conventional-changelog": "^3.1.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.10.1",
+    "commitizen": "^4.1.2",
+    "cspell": "^4.0.63",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
-    "jest": "^26.0.0",
-    "lint-staged": "^10.1.3",
-    "prettier": "^2.0.4",
-    "typescript": "^3.8.3"
+    "jest": "^26.1.0",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5"
   },
   "engines": {
     "node": "12",
