--- a/package.json
+++ b/package.json
@@ -71,19 +71,20 @@
     "root": true
   },
   "jest": {
-    "coverageDirectory": "coverage",
-    "restoreMocks": true,
+    "coverageReporters": [
+      "text"
+    ],
     "testEnvironment": "node"
   },
   "dependencies": {
-    "fp-ts": "^2.7.0"
+    "fp-ts": "^2.7.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
+    "@types/jest": "^26.0.7",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.1.2",
     "cspell": "^4.0.63",
-    "eslint": "^7.4.0",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -95,10 +96,11 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7"
   },
   "engines": {
-    "node": "12",
-    "npm": "6"
+    "node": "^12.18.2",
+    "npm": "^6.14.5"
   }
 }
