--- a/package.json
+++ b/package.json
@@ -77,30 +77,35 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "fp-ts": "^2.7.1"
+    "fluture": "^13.0.1",
+    "fp-ts": "^2.7.1",
+    "lodash": "^4.17.20",
+    "ramda": "^0.27.1",
+    "rxjs": "^6.6.3",
+    "sanctuary": "^3.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.7",
+    "@types/jest": "^26.0.15",
     "babel-eslint": "^10.1.0",
-    "commitizen": "^4.1.2",
-    "cspell": "^4.0.63",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
+    "commitizen": "^4.2.2",
+    "cspell": "^4.1.2",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-config-standard": "^15.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "typescript": "^4.0.2"
+    "eslint-plugin-standard": "^4.0.2",
+    "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "lint-staged": "^10.4.2",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
   },
   "engines": {
-    "node": "^12.18.2",
-    "npm": "^6.14.5"
+    "node": "^12.19.0",
+    "npm": "^6.14.8"
   }
 }
