--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
   },
   "eslintConfig": {
     "env": {
-      "es2020": true,
+      "es2021": true,
       "jest": false
     },
     "extends": [
       "eslint:recommended",
-      "eslint-config-standard",
-      "plugin:eslint-plugin-jest/recommended",
-      "eslint-config-prettier",
-      "eslint-config-prettier/standard"
+      "standard",
+      "plugin:jest/recommended",
+      "plugin:prettier/recommended",
+      "prettier/standard"
     ],
     "overrides": [
       {
@@ -77,33 +77,32 @@
   },
   "dependencies": {
     "fluture": "^13.0.1",
-    "fp-ts": "^2.7.1",
+    "fp-ts": "^2.9.1",
     "lodash": "^4.17.20",
     "ramda": "^0.27.1",
     "rxjs": "^6.6.3",
     "sanctuary": "^3.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.16",
     "commitizen": "^4.2.2",
-    "cspell": "^4.1.2",
-    "eslint": "^7.11.0",
+    "cspell": "^4.2.5",
+    "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
-    "eslint-config-standard": "^16.0.1",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "husky": "^4.3.0",
-    "jest": "^26.6.1",
-    "lint-staged": "^10.4.2",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "husky": "^4.3.4",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.2"
   },
   "engines": {
-    "node": "^12.19.0",
+    "node": "^14.15.1",
     "npm": "^6.14.8"
   }
 }
