--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
       "eslint:recommended",
       "standard",
       "standard-with-typescript",
-      "plugin:prettier/recommended",
-      "prettier/standard"
+      "plugin:prettier/recommended"
     ],
     "overrides": [
       {
