--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "license": "MIT",
   "author": "Akira Cai",
-  "type": "module",
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -22,28 +21,26 @@
       "@typescript-eslint"
     ],
     "extends": [
-      "airbnb-base",
-      "airbnb-typescript/base",
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended-requiring-type-checking",
       "prettier"
     ],
     "root": true
   },
   "dependencies": {
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.5.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   },
   "engines": {
-    "node": "^14.18.1",
+    "node": "^14.18.2",
     "npm": "^6.14.15"
   }
 }
