--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "root": true
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "ramda": "^0.27.2",
     "rxjs": "^7.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
+    "@types/ramda": "^0.27.63",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
