--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "author": "Akira Cai",
+  "type": "module",
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -29,6 +30,7 @@
     "root": true
   },
   "dependencies": {
+    "fp-ts": "^2.11.8",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "rxjs": "^7.5.2"
@@ -36,15 +38,15 @@
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/ramda": "^0.27.64",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "engines": {
-    "node": "^14.18.2",
+    "node": "^14.18.3",
     "npm": "^6.14.15"
   }
 }
