--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "license": "MIT",
   "author": "Akira Cai",
-  "type": "module",
+  "scripts": {
+    "test": "nodemon index.ts"
+  },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -40,12 +42,15 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
+    "@types/node": "^14.18.9",
     "@types/ramda": "^0.27.64",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
+    "nodemon": "^2.0.14",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "engines": {
