--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "2.0.14",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
