--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,7 @@ updates:
   directory: "/"
   schedule:
     interval: daily
-    time: "00:00"
-    timezone: Asia/Taipei
+  ignore:
+    - dependency-name: "@types/node"
+      versions: [">14"],
   open-pull-requests-limit: 99
