--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "fp-ts": "^2.11.9",
     "lodash": "^4.17.21",
+    "monocle-ts": "^2.3.12",
     "ramda": "^0.28.0",
     "rxjs": "^7.5.5"
   },
