--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "start": "nodemon index.ts"
   },
   "dependencies": {
-    "fp-ts": "^2.11.9",
+    "fp-ts": "^2.12.1",
     "lodash": "^4.17.21",
-    "monocle-ts": "^2.3.12",
+    "monocle-ts": "^2.3.13",
     "ramda": "^0.28.0",
     "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.180",
-    "@types/node": "^14.18.12",
-    "@types/ramda": "^0.28.3",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "eslint": "^8.12.0",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^14.18.21",
+    "@types/ramda": "^0.28.14",
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "nodemon": "2.0.18",
-    "prettier": "^2.6.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "nodemon": "^2.0.18",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": "^14.19.3",
