--- a/package.json
+++ b/package.json
@@ -15,28 +15,52 @@
   "scripts": {
     "start": "nodemon index.ts"
   },
-  "dependencies": {
-    "fp-ts": "^2.12.3",
-    "lodash": "^4.17.21",
-    "monocle-ts": "^2.3.13",
-    "ramda": "^0.28.0",
-    "rxjs": "^7.5.5"
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended-requiring-type-checking",
+      "prettier"
+    ],
+    "root": true
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.185",
-    "@types/node": "^14.18.28",
-    "@types/ramda": "^0.28.15",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
+    "@types/node": "^16.18.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.3"
   },
   "engines": {
-    "node": "^14.20.0",
-    "npm": "^6.14.17"
+    "node": "^16.18.1",
+    "npm": "^8.19.2"
+  },
+  "cspell": {
+    "version": "0.2",
+    "language": "en",
+    "words": [
+      "akira"
+    ],
+    "dictionaries": [
+      "companies",
+      "en_US",
+      "filetypes",
+      "misc",
+      "node",
+      "npm",
+      "softwareTerms",
+      "typescript"
+    ]
   }
 }
