--- a/package.json
+++ b/package.json
@@ -13,23 +13,8 @@
   "license": "MIT",
   "author": "Akira Cai",
   "scripts": {
-    "start": "nodemon index.ts"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:@typescript-eslint/recommended-requiring-type-checking",
-      "prettier"
-    ],
-    "root": true
+    "start": "nodemon index.ts",
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/node": "^16.18.3",
@@ -40,27 +25,11 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vitest": "^0.25.2"
   },
   "engines": {
     "node": "^16.18.1",
     "npm": "^8.19.2"
-  },
-  "cspell": {
-    "version": "0.2",
-    "language": "en",
-    "words": [
-      "akira"
-    ],
-    "dictionaries": [
-      "companies",
-      "en_US",
-      "filetypes",
-      "misc",
-      "node",
-      "npm",
-      "softwareTerms",
-      "typescript"
-    ]
   }
 }
