--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
+    "typescript": "~4.8.4",
     "vitest": "^0.25.2"
   },
   "engines": {
