--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
   "name": "create-express-app",
   "version": "1.0.0",
-  "description": "create-express-app",
-  "homepage": "https://github.com/blackwindforce/create-express-app#readme",
-  "bugs": {
-    "url": "https://github.com/blackwindforce/create-express-app/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/blackwindforce/create-express-app.git"
-  },
-  "license": "MIT",
-  "author": "Akira Cai",
   "scripts": {
     "start": "nodemon index.ts",
     "test": "vitest"
   },
   "devDependencies": {
     "@types/node": "^16.18.3",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
-    "vitest": "^0.25.2"
+    "tsutils": "^3.21.0",
+    "typescript": "^4.9.3",
+    "vitest": "^0.25.3"
   },
   "engines": {
     "node": "^16.18.1",
-    "npm": "^8.19.2"
+    "npm": "^8.19.3"
   }
 }
