--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,4 @@ updates:
         update-types:
           - "version-update:semver-major"
     open-pull-requests-limit: 99
+    versioning-strategy: "increase"
