--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    // "incremental": true /* Save .tsbuildinfo files to allow for incremental compilation of projects. */,
+    "incremental": true /* Save .tsbuildinfo files to allow for incremental compilation of projects. */,
     // "composite": true /* Enable constraints that allow a TypeScript project to be used with project references. */,
     // "tsBuildInfoFile": "./.tsbuildinfo" /* Specify the path to .tsbuildinfo incremental compilation file. */,
     // "disableSourceOfProjectReferenceRedirect": true /* Disable preferring source files instead of declaration files when referencing composite projects. */,
@@ -49,21 +49,21 @@
     // "emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
     // "sourceMap": true /* Create source map files for emitted JavaScript files. */,
     // "outFile": "./" /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */,
-    // "outDir": "./" /* Specify an output folder for all emitted files. */,
-    // "removeComments": true /* Disable emitting comments. */,
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+    "removeComments": true /* Disable emitting comments. */,
     // "noEmit": true /* Disable emitting files from a compilation. */,
     // "importHelpers": true /* Allow importing helper functions from tslib once per project, instead of including them per-file. */,
-    // "importsNotUsedAsValues": "remove" /* Specify emit/checking behavior for imports that are only used for types. */,
+    "importsNotUsedAsValues": "error" /* Specify emit/checking behavior for imports that are only used for types. */,
     // "downlevelIteration": true /* Emit more compliant, but verbose and less performant JavaScript for iteration. */,
     // "sourceRoot": "" /* Specify the root path for debuggers to find the reference source code. */,
     // "mapRoot": "" /* Specify the location where debugger should locate map files instead of generated locations. */,
     // "inlineSourceMap": true /* Include sourcemap files inside the emitted JavaScript. */,
     // "inlineSources": true /* Include source code in the sourcemaps inside the emitted JavaScript. */,
     // "emitBOM": true /* Emit a UTF-8 Byte Order Mark (BOM) in the beginning of output files. */,
-    // "newLine": "crlf" /* Set the newline character for emitting files. */,
-    // "stripInternal": true /* Disable emitting declarations that have '@internal' in their JSDoc comments. */,
+    "newLine": "lf" /* Set the newline character for emitting files. */,
+    "stripInternal": true /* Disable emitting declarations that have '@internal' in their JSDoc comments. */,
     // "noEmitHelpers": true /* Disable generating custom helper functions like '__extends' in compiled output. */,
-    // "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
+    "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
     // "preserveConstEnums": true /* Disable erasing 'const enum' declarations in generated code. */,
     // "declarationDir": "./" /* Specify the output directory for generated declaration files. */,
     // "preserveValueImports": true /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */,
@@ -99,5 +99,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true /* Skip type checking .d.ts files that are included with TypeScript. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src/**/*"]
 }
