--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     /* Modules */
     "module": "Node16" /* Specify what module code is generated. */,
     // "rootDir": "./" /* Specify the root folder within your source files. */,
-    "moduleResolution": "Node16" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "moduleResolution": "node16" /* Specify how TypeScript looks up a file from a given module specifier. */,
     // "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     // "paths": {} /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [] /* Allow multiple folders to be treated as one when resolving modules. */,
@@ -53,7 +53,6 @@
     "removeComments": true /* Disable emitting comments. */,
     // "noEmit": true /* Disable emitting files from a compilation. */,
     // "importHelpers": true /* Allow importing helper functions from tslib once per project, instead of including them per-file. */,
-    "importsNotUsedAsValues": "error" /* Specify emit/checking behavior for imports that are only used for types. */,
     // "downlevelIteration": true /* Emit more compliant, but verbose and less performant JavaScript for iteration. */,
     // "sourceRoot": "" /* Specify the root path for debuggers to find the reference source code. */,
     // "mapRoot": "" /* Specify the location where debugger should locate map files instead of generated locations. */,
@@ -66,7 +65,6 @@
     "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
     // "preserveConstEnums": true /* Disable erasing 'const enum' declarations in generated code. */,
     // "declarationDir": "./" /* Specify the output directory for generated declaration files. */,
-    // "preserveValueImports": true /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */,
 
     /* Interop Constraints */
     "isolatedModules": true /* Ensure that each file can be safely transpiled without relying on other imports. */,
