--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    "incremental": true /* Save .tsbuildinfo files to allow for incremental compilation of projects. */,
+    // "incremental": true /* Save .tsbuildinfo files to allow for incremental compilation of projects. */,
     // "composite": true /* Enable constraints that allow a TypeScript project to be used with project references. */,
     // "tsBuildInfoFile": "./.tsbuildinfo" /* Specify the path to .tsbuildinfo incremental compilation file. */,
     // "disableSourceOfProjectReferenceRedirect": true /* Disable preferring source files instead of declaration files when referencing composite projects. */,
@@ -25,9 +25,9 @@
     // "moduleDetection": "auto" /* Control what method is used to detect module-format JS files. */,
 
     /* Modules */
-    "module": "Node16" /* Specify what module code is generated. */,
+    "module": "NodeNext" /* Specify what module code is generated. */,
     // "rootDir": "./" /* Specify the root folder within your source files. */,
-    "moduleResolution": "node16" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "moduleResolution": "nodenext" /* Specify how TypeScript looks up a file from a given module specifier. */,
     // "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     // "paths": {} /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [] /* Allow multiple folders to be treated as one when resolving modules. */,
@@ -55,8 +55,8 @@
     // "sourceMap": true /* Create source map files for emitted JavaScript files. */,
     // "inlineSourceMap": true /* Include sourcemap files inside the emitted JavaScript. */,
     // "outFile": "./" /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */,
-    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
-    "removeComments": true /* Disable emitting comments. */,
+    // "outDir": "./" /* Specify an output folder for all emitted files. */,
+    // "removeComments": true /* Disable emitting comments. */,
     // "noEmit": true /* Disable emitting files from a compilation. */,
     // "importHelpers": true /* Allow importing helper functions from tslib once per project, instead of including them per-file. */,
     // "importsNotUsedAsValues": "remove" /* Specify emit/checking behavior for imports that are only used for types. */,
@@ -65,10 +65,10 @@
     // "mapRoot": "" /* Specify the location where debugger should locate map files instead of generated locations. */,
     // "inlineSources": true /* Include source code in the sourcemaps inside the emitted JavaScript. */,
     // "emitBOM": true /* Emit a UTF-8 Byte Order Mark (BOM) in the beginning of output files. */,
-    "newLine": "lf" /* Set the newline character for emitting files. */,
-    "stripInternal": true /* Disable emitting declarations that have '@internal' in their JSDoc comments. */,
+    // "newLine": "crlf" /* Set the newline character for emitting files. */,
+    // "stripInternal": true /* Disable emitting declarations that have '@internal' in their JSDoc comments. */,
     // "noEmitHelpers": true /* Disable generating custom helper functions like '__extends' in compiled output. */,
-    "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
+    // "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
     // "preserveConstEnums": true /* Disable erasing 'const enum' declarations in generated code. */,
     // "declarationDir": "./" /* Specify the output directory for generated declaration files. */,
     // "preserveValueImports": true /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */,
@@ -76,10 +76,10 @@
     /* Interop Constraints */
     // "isolatedModules": true /* Ensure that each file can be safely transpiled without relying on other imports. */,
     "verbatimModuleSyntax": true /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */,
-    "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+    // "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
+    // "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     // "preserveSymlinks": true /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    // "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 
     /* Type Checking */
     "strict": true /* Enable all strict type-checking options. */,
