--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,13 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/strict",
+    "plugin:@typescript-eslint/strict-type-checked",
     "prettier"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "ecmaVersion": 2023,
+    "jsDocParsingMode": "none",
+    "project": true
   },
-  "plugins": ["@typescript-eslint"],
   "root": true
 }
