--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/main.ts"
+    "lint": "cspell src && eslint src && prettier --check ."
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^20.12.2",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
+    "cspell": "^8.6.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "fp-ts": "^2.16.5",
-    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "engines": {
