--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,5 +4,5 @@
     "noEmit": true
   },
   "extends": ["./tsconfig.base.json"],
-  "include": ["eslint.config.mjs"]
+  "include": ["./eslint.config.mjs"]
 }
