--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "./dist"
   },
   "extends": ["./tsconfig.base.json"],
-  "include": ["src/**/*.mts"]
+  "include": ["./src/**/*.mts"]
 }
