--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
   "compilerOptions": {
-    "erasableSyntaxOnly": true,
     "lib": [
       "ES2024",
       "ESNext.Array",
       "ESNext.Collection",
       "ESNext.Error",
       "ESNext.Iterator",
-      "ESNext.Promise"
+      "ESNext.Promise",
+      "ESNext.Sharedmemory"
     ],
-    "noEmit": true,
-    "noUncheckedSideEffectImports": true,
-    "verbatimModuleSyntax": true
+    "noEmit": true
   },
   "extends": [
     "@tsconfig/node24/tsconfig.json",
-    "@tsconfig/strictest/tsconfig.json"
+    "@tsconfig/strictest/tsconfig.json",
+    "@tsconfig/node-ts/tsconfig.json"
   ],
   "include": ["./src/**/*.ts"]
 }
