--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "lint": "cspell && eslint && prettier --check . && tsc",
+    "format": "prettier --write .",
+    "lint": "cspell && eslint --flag unstable_native_nodejs_ts_config && prettier --check . && tsc",
+    "lint:fix": "eslint --fix --flag unstable_native_nodejs_ts_config",
     "test": "node src/main.ts"
   },
   "devDependencies": {
