Add ESLint options to settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,4 @@
-{ "typescript.tsdk": "node_modules/typescript/lib" }
+{
+  "eslint.options": { "flags": ["unstable_native_nodejs_ts_config"] },
+  "typescript.tsdk": "node_modules/typescript/lib"
+}
